Expense Tracker app Completed

--- a/expense_tracker/pubspec.yaml
+++ b/expense_tracker/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   uuid: ^3.0.7
   intl: ^0.18.1
+  shared_preferences: ^2.0.8
+
 
 
   # The following adds the Cupertino Icons font to your application.
