--- a/Meals_App/pubspec.yaml
+++ b/Meals_App/pubspec.yaml
@@ -47,6 +47,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   google_fonts: ^4.0.4
+  transparent_image: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
