--- a/favourite_place_app/pubspec.yaml
+++ b/favourite_place_app/pubspec.yaml
@@ -31,12 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  uuid: ^3.0.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^5.0.0
-
+  riverpod: ^2.3.6
+  flutter_riverpod: ^2.3.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
