Installing Image Picker package
NSPhotLibaryUsageDiscription
NSCameraUsageLibrary
NSMicrophoneUsageLibrary
Add these key in Info.plist

--- a/favourite_place_app/pubspec.yaml
+++ b/favourite_place_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^5.0.0
   riverpod: ^2.3.6
   flutter_riverpod: ^2.3.6
+  image_picker: ^0.8.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
