--- a/favourite_place_app/pubspec.yaml
+++ b/favourite_place_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   riverpod: ^2.3.6
   flutter_riverpod: ^2.3.6
   image_picker: ^0.8.8
+  location: ^4.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
