--- a/favourite_place_app/pubspec.yaml
+++ b/favourite_place_app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_riverpod: ^2.3.6
   image_picker: ^0.8.8
   location: ^4.4.0
+  google_maps_flutter: ^2.3.0
+  google_maps_flutter_web: ^0.5.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
