--- a/flutter_chat_app/pubspec.yaml
+++ b/flutter_chat_app/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   fluttertoast: ^8.2.2
+  firebase_storage: ^11.2.3
+  image_picker: ^0.8.9
 
 dev_dependencies:
   flutter_test:
