--- a/flutter_chat_app/pubspec.yaml
+++ b/flutter_chat_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.2.2
   firebase_storage: ^11.2.3
   image_picker: ^0.8.9
+  cloud_firestore: ^4.8.1
 
 dev_dependencies:
   flutter_test:
