--- a/flutter_chat_app/pubspec.yaml
+++ b/flutter_chat_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^11.2.3
   image_picker: ^0.8.9
   cloud_firestore: ^4.8.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
